Fixed misalignment with row action menu.

--- a/stencil-workspace/src/components/modus-data-table/modus-data-table.scss
+++ b/stencil-workspace/src/components/modus-data-table/modus-data-table.scss
@@ -181,6 +181,7 @@ modus-dropdown {
 
   .list-container {
     position: relative;
+    top: -6px;
 
     .items-container {
       display: inline-block;
